tests/snapshots/test_runner__tests__compiler__transpile__module1__b.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let b : Int = 2

entry
  a print

============
EXIT CODE
============
0

============
STDOUT
============
1

============
STDERR
============
